--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,16 @@
 {
   "extends": [
     "./node_modules/gts/",
-    "plugin:react/recommended",
-    "prettier"
+    "plugin:react/recommended"
   ],
   "env": {
     "browser": true,
     "jest": true
   },
-  "plugins": ["react", "react-hooks", "prettier"],
+  "plugins": ["react", "react-hooks"],
   "rules": {
     "@typescript-eslint/no-explicit-any": "off",
-    "react-hooks/exhaustive-deps": "off",
-    "prettier/prettier": [
-      "error",
-      {
-        "endOfLine": "auto"
-      }
-    ]
+    "react-hooks/exhaustive-deps": "off"
   },
   "settings": {
     "react": {
